--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "babel-node" : "./node_modules/.bin/babel-node",
+    "start": "nodemon --exec npm run babel-node -- ./index.js",
     "test": "node test.js"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "body-parser": "^1.18.2",
-    "request": "^2.81.0",
-    "express": "4.15.2"
+    "express": "4.15.2",
+    "request": "^2.81.0"
   },
   "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^21.2.0",
+    "jest": "^21.2.1",
+    "jest-cli": "^21.2.1",
+    "nodemon": "^1.12.1",
+    "request": "^2.81.0"
   },
   "repository": {
     "type": "git",
