--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "babel-node": "./node_modules/.bin/babel-node",
     "start": "nodemon --exec npm run babel-node -- ./index.js",
-    "test": "node test.js"
+    "test": "./node_modules/.bin/jest",
+    "test:watch": "./node_modules/.bin/jest --watch"
   },
   "dependencies": {
     "babel": "^6.23.0",
